doc: 更新相等文档

--- a/javascript/相等操作符.md
+++ b/javascript/相等操作符.md
@@ -1,31 +1,85 @@
-#### 相等操作符 ==
+# 相等和全等
 
-1. 如果有一个操作数是布尔值，则在比较相等性之前，将其转换为数值；
+## 相等操作符 ==
 
-2. 如果一个操作数是字符串，另一个操作数是数值，在比较之前先将字符串转换为数值；
+### 如果有一个操作数是布尔值，则在比较相等性之前，将其转换为数值
 
-3. 如果一个操作数是对象，另一个操作数不是，则调用对象的 valueOf() 方法，用得到的基本类型值按照前面的规则进行比较；
+```javascript
+// 布尔值转换成数值的时候，true 转换为 1，false 转换为 0
 
-4. 如果有一个操作数是 NaN，无论另一个操作数是什么，相等操作符都返回 false；
+true == 1; // true
 
-5. 如果两个操作数都是对象，则比较它们是不是同一个对象。如果指向同一个对象，则相等操作符返回 true；
+true == 0; // false
 
-6. 在比较相等性之前，不能将 null 和 undefined 转成其他值。
+true == 2; // false
 
-7. null 和 undefined 是相等的。
+false == 0; // true
 
-#### 一、基本规则
+false == 2; // false
+```
 
-如果相等操作符两边的操作数，不包含 null 或者 undefined，且两个操作数不全是对象，在执行相等比较之前，会先调用 Number() 将两个操作数强制转为 Number 类型，然后进行比较。
+### 如果一个操作数是字符串，另一个操作数是数值，在比较之前先将字符串转换为数值
 
-#### 二、[] == [] 和 \{} == {}
+```javascript
+'1' == 1; // true
 
-在 JavaScript 中，Object、Array、Function、RegExp、Date 都是引用类型，声明引用类型的时候，变量名保存在 js 的栈内存里面，而对应的值保存在堆内存里面，而这个变量在栈内存中实际保存的是：这个值在堆内存中的地址，也就是指针。
+'0' == 0; // true
 
-#### 三、[] == ![] 和 \{} == !{}
+'5' == 5; // true
+```
 
-ECMAScript 中规定，逻辑非 (!) 的优先级高于相等操作符 ( == )
+### 如果一个操作数是对象，另一个操作数不是，则调用对象的 valueOf() 方法，用得到的基本类型值按照前面的规则进行比较
 
-在比较 [] == ![] 的时候，先计算 ![] 得到布尔值 false
+```javascript
+/**
+ * 数组和布尔值进行比较，都会转换成数值进行比较的
+ * 空数组调用的是 valueOf() 方法，但是返回的是还是空数组 []，无法返回基本类型值
+ * 接着会调用 toString() 方法，返回的是空字符串 ''，空字符串转换数值是 0
+ * 所以左右两侧比较的话是 0 == 0 返回 true
+ */
+[] == false; // true
 
-所以实际上比较的是 [] == false
+/**
+ * 这个对比看着比较奇怪，但是其实返回的是 true，
+ * 首先看右侧的值，因为是逻辑非取值，所以空数组会先转成布尔值，然后取反。也就是得到 false
+ * 右侧转成布尔值后变成了 [] == false，也就是上面的转换过程了。
+ */
+[] == ![]; // true
+
+/**
+ * 右侧的逻辑非转换成布尔值是 false
+ * 左侧转换成布尔值是 true
+ */
+{} == !{}; // false
+
+// 同上
+{} == {}; // true
+```
+
+### 如果有一个操作数是 NaN，无论另一个操作数是什么，相等操作符都返回 false
+
+```javascript
+NaN == NaN; // false
+
+NaN == 1; // false
+
+NaN == '1'; // false
+
+NaN == 0; // false
+```
+
+### 如果两个操作数都是对象，则比较它们是不是同一个对象。如果指向同一个对象，则相等操作符返回 true
+
+### 在比较相等性之前，不能将 null 和 undefined 转成其他值，null 和 undefined 是相等的
+
+```javascript
+null == undefined; // true
+
+null == 0; // false
+
+undefined == 0; // false
+```
+
+## 全等操作符 ===
+
+全等和不全等比较的是符号两侧的操作数，以全等操作符为例，如果操作数满足全等则返回 true，否则返回 false
