--- a/vue学习/声明式和命令式编程.md
+++ b/vue学习/声明式和命令式编程.md
@@ -10,6 +10,8 @@
 
 **控制流**：包括条件语句（如 if、else）、循环语句（如 for、while）和函数调用来控制程序的执行顺序。
 
+命令式编程代表框架：JQuery
+
 ## 声明式编程
 
 声明式编程是一种编程范式，侧重于描述**“是什么”而不是“如何做”**。与命令式编程的详细步骤和流程不同，声明式编程更加关注表达逻辑和结果，而不是操作的具体实现。声明式编程常用于数据查询、配置和界面描述等领域。
@@ -19,6 +21,8 @@
 **侧重描述**：描述结果和逻辑，而非具体的操作步骤。
 
 **不可变性**：许多声明式编程语言或框架鼓励使用不可变数据结构。
+
+声明式变成代表框架：React、Vue 等
 
 ## 命令式和声明式对比
 
@@ -32,4 +36,4 @@
 
 为什么会有这样的差异呢？
 
-因为框架的实现本身就是封装了命令式代码才能实现声明式编程。
+因为声明式框架的实现本身就是封装了命令式代码才能实现声明式编程，因此在性能的消耗上声明式框架要多出一层来找出变更前后的差异性。但也是由于声明式框架的封装才能使得其代码可维护性更强，给开发者带来的心智负担更小。
